# workspace-gen

./: .gitignore  Cargo.toml  README.md  readme.md
src/: main.rs
