[package]
name = "workspace-gen"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Given several subdirectories containing cargo projects, creates a parent workspace manifest file"
repository = "https://github.com/avantgardnerio/workspace-gen"

[dependencies]
cargo_toml = "0.11.5"
anyhow = "1.0.58"
toml = "0.5.9"
pathdiff = "0.2.1"
regex = "1.6.0"
configparser = "3.0.0"
text_io = "0.1.12"
git2 = "0.15.0"
clap = { version = "3.2.16", features = ["derive"] }
